[package]
name = "timing"
version = "0.1.0"
authors = ["jvolmer <juliavolmer@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }